fix styling break on eugenewei.com

--- a/src/components/TooltipWrapper/index.scss
+++ b/src/components/TooltipWrapper/index.scss
@@ -28,4 +28,6 @@
   cursor: default;
   padding: 0;
   margin: 0;
+  font-weight: inherit;
+  font-style: inherit;
 }
